--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     def room_version = "1.1.1"
     def volley_version = "1.1.1"
     def glide_version = "4.8.0"
+    def dagger_version="2.17"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$compat_version"
@@ -65,4 +66,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:6.5.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 }
